# mariatds

./: CMakeLists.txt
src/: client_thread.cpp  mariatds.cpp  mariatds.h
